--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <main>
         <h1>Welcome to My Website</h1>
         <p>This is a sample paragraph to demonstrate a basic HTML structure.</p>   
-        <a href="https://www.example.com">Visit Example.com</a>
+        <a href="https://www.bhphotovideo.com/">Fixed Link to B and H photos.</a>
     </main>
     <article>
         <h2>Article Title</h2>
