--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
+       <h1>HTML Final Project</h1>
+    </header>
     <main>
         <h1>Welcome to My Website</h1>
         <p>This is a sample paragraph to demonstrate a basic HTML structure.</p>   
@@ -30,4 +33,7 @@
         >
     </article>
 </body>
+<footer>
+    Images recieved from digital-photgraphy school and bigfootdigital sites. 
+</footer>
 </html>
